# dreamer2

./: .env.example  .gitignore  .vercelignore  ANIMATION_REGISTRY.md  ARCHITECTURE.md  ART_DIRECTION.md  ATMOSPHERE.md  COMMAND_MAP.md  COMPANION_ORGANISM.md  GLYPH_LANGUAGE.md  MEMORY_MODEL.md  MODULE_SPEC.md  PACK_SYSTEM.md  PLACE_GRAMMAR.md  PLAN.md  PORTRAIT_SPEC.md  PROCEDURAL_ANIMATION.md  README.md  ROADMAP.md  SLICE_3_ATMOSPHERE_ENGINE.md  TERMINAL_CAPABILITIES.md  WORKLOG.md  WORLDGEN.md  WORLD_GENERATION.md  pyproject.toml  vercel.json
api/: command.py  frame.py
config/: README.md
config/defaults/: app.config.example.json  companion.profile.example.json  runtime.registry.example.json
content/: README.md
content/ambient/: core.behaviors.json
content/artifacts/: core.artifacts.json
content/capabilities/: core.tiers.json
content/commands/: core.commands.json
content/companions/: core.entities.json
content/distortion/: core.presets.json
content/evolution/: core.rules.json
content/micromotion/: core.behaviors.json
content/modes/: core.modes.json
content/panels/: core.panels.json
dreamer2_ref/: __init__.py  app.py  assets.py  cli.py  commands.py  memory.py  models.py  providers.py  render.py  web.py
dreamer2_ref/web_assets/: app.js  index.html
dreamer2_ref/worldgen/: __init__.py  animation.py  atmosphere.py  biome.py  cells.py  cli.py  fields.py  focal.py  integration.py  pipeline.py  registry.py  scars.py  (+4 more)
packs/: README.md
public/: styles.css
specs/: INTERFACES.md  README.md
tests/: test_reference_runtime.py  test_worldgen.py
(+77 files in other folders)
